--- a/src/app/Pages/viewJobs/viewJobs.component.html
+++ b/src/app/Pages/viewJobs/viewJobs.component.html
@@ -25,6 +25,25 @@
            
         </div> -->
         <div class="container">
+
+            <div class="nav-header">
+                <div class="row" style="padding:20px">
+                    
+                    <div class="col-6 my-auto">
+                        <div class="filter-bar" >
+                            <button class="btn" style="color:black; background-color:white;border-radius: 50px;" routerLink="/home">
+                                <i class="fa-solid fa-arrow-left"></i>
+                            </button>
+                            
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        
+                    </div>
+                    
+                    
+            </div>
+            
             <div class="row" style="padding:20px">
                 
                 <div class="col-6 my-auto">
