--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -1,1 +1,44 @@
-<p>home works!</p>
+<div>
+    <div class="content" style="align-items: center;justify-content: center;display: flex; ">
+
+        <div class="welcome-page" >
+
+            
+    
+            <div class="row" style="margin-top:10vh; margin-bottom: 10vh;">
+                <div class="col-12" style="align-items: center;justify-content: center;display: flex;">
+                    <h2>Welcome to</h2>
+                   
+                </div>
+                <div class="col-12" style="align-items: center;justify-content: center;display: flex;">
+                    <h2 style="font-weight:bold">LocalBids</h2>
+                   
+                </div>
+            </div>
+
+            <hr width="90%" />
+    
+            <div class="row" style="">
+                <div class="col-12" style="justify-content: center;display: flex;text-align: center;">
+                    <button type="button" routerLink="/view-jobs" class="btn btn-secondary cat-button" style="width:60vw;justify-content: center;display: flex;text-align: center;margin:0px 0px 10px 0px;  color: black; background-color: white; border-radius: 5px;">
+                        <label style="margin:10px" >
+                           View Listings
+                        </label>
+                    </button>
+                </div>
+    
+                <div class="col-12" style="justify-content: center;display: flex;text-align: center;">
+                    <button type="button" routerLink="/create-job"class="btn btn-secondary cat-button" style="width:60vw;justify-content: center;display: flex;text-align: center;margin:0px 0px 10px 0px;  color: black; background-color: white; border-radius: 5px;">
+                        <label style="margin:10px" >
+                           Create a Job
+                        </label>
+                    </button>
+                </div>
+
+                
+            </div>
+        </div>
+        
+    </div>  
+</div>
+
