created registration page and began adding service files

--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -26,7 +26,7 @@
                     <div class="form-group" style="width: 70%;">
                         <input  type="email" class="form-control" id="exampleFormControlInput1" maxlength="35" [(ngModel)]="userEmail" style=" border-width: 1.5px; border-color:black">
                     </div>
-                    <!-- <button type="button" routerLink="/view-jobs" class="btn btn-secondary cat-button" style="width:60vw;justify-content: center;display: flex;text-align: center;margin:0px 0px 10px 0px;  color: black; background-color: white; border-radius: 5px;">
+                    <!-- <button type="button"  class="btn btn-secondary cat-button" style="width:60vw;justify-content: center;display: flex;text-align: center;margin:0px 0px 10px 0px;  color: black; background-color: white; border-radius: 5px;">
                         <label style="margin:10px" >
                            View Listings
                         </label>
@@ -57,7 +57,7 @@
                     </div>
     
                     <div class="col-12" style="justify-content: center;display: flex;text-align: center;">
-                        <button type="button"  class="btn btn-secondary cat-button" style="width:50vw;justify-content: center;display: flex;text-align: center;margin:0px 0px 10px 0px;  color: black; background-color: white; border-radius: 5px;">
+                        <button type="button" routerLink="/sign-up" class="btn btn-secondary cat-button" style="width:50vw;justify-content: center;display: flex;text-align: center;margin:0px 0px 10px 0px;  color: black; background-color: white; border-radius: 5px;">
                             <label style="margin:7px" >
                                Register
                             </label>
