--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-navbar></app-navbar> -->
+<!-- <alert></alert> -->
 <router-outlet></router-outlet>
 <!-- <app-footer *ngIf="removeFooter()"></app-footer> -->
