created user profile page and linked job to the user

--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -44,6 +44,14 @@
                 </div>
 
                 <div class="col-12" style="justify-content: center;display: flex;text-align: center;">
+                    <button type="button" routerLink="/user-profile"class="btn btn-secondary cat-button" style="width:60vw;justify-content: center;display: flex;text-align: center;margin:0px 0px 10px 0px;  color: black; background-color: white; border-radius: 5px;">
+                        <label style="margin:10px" >
+                           Your Profile
+                        </label>
+                    </button>
+                </div>
+
+                <div class="col-12" style="justify-content: center;display: flex;text-align: center;">
                     
                     <span (click)="logout()" style="color:darkgrey">Log Out</span>
                 </div>
