--- a/src/app/Pages/view-job-details/view-job-details.component.html
+++ b/src/app/Pages/view-job-details/view-job-details.component.html
@@ -4,7 +4,7 @@
                 
             <div class="col-6 my-auto">
                 <div class="filter-bar" >
-                    <button class="btn" style="color:black; background-color:white;border-radius: 50px;" routerLink="/">
+                    <button class="btn" style="color:black; background-color:white;border-radius: 50px;" routerLink="/{{this.routing}}">
                         <i class="fa-solid fa-arrow-left"></i>
                     </button>
                     
