--- a/src/app/Pages/viewJobs/viewJobs.component.html
+++ b/src/app/Pages/viewJobs/viewJobs.component.html
@@ -70,7 +70,7 @@
                                   <h6 class="card-text" style="font-weight:100;color: 4B4B4B;margin-bottom: 0.1rem;">{{job.cat}}</h6>
                                   <p class="card-text" style="font-weight:lighter;color:darkgrey;margin-bottom: 0.5rem;">{{job.location}}</p>
                                     <div style="text-align: center;">
-                                        <a [routerLink]="['/view-details']" [state]="{ data: job}"class="btn" style="margin: 0 auto; background-color:#4F84DE;border: none; width: 80%;">View Listing</a>
+                                        <a [routerLink]="['/view-details']" [state]="{ data: job,previous: 'view-jobs'}"class="btn" style="margin: 0 auto; background-color:#4F84DE;border: none; width: 80%;">View Listing</a>
                                     </div>
                                     
                                 </div>
