removed unused style tags

--- a/src/app/Pages/create-jobs/create-jobs.component.html
+++ b/src/app/Pages/create-jobs/create-jobs.component.html
@@ -119,7 +119,7 @@
                     <h4 style="color:white; margin-top: 0px;">Where is the job located?:</h4>
                 </div>
             </div>
-            <div class="row" style="">
+            <div class="row">
 
                 <div class="col-12" style="padding-left: 14vw;">
                     <h3 style="margin-top: 0px;">Town/City</h3>
@@ -164,7 +164,7 @@
                 </div>
             </div>
 
-            <div class="row" style="">
+            <div class="row">
                 <div class="col-12" style="padding-left: 16vw;">
                     <h3 style="margin-top: 0px;">Phone Number</h3>
                 </div>
