--- a/src/app/Pages/user-profiles/profile/profile.component.html
+++ b/src/app/Pages/user-profiles/profile/profile.component.html
@@ -100,7 +100,8 @@
                               <p class="card-text" style="font-weight:lighter;color:darkgrey;margin-bottom: 0.5rem;">{{job.location}}</p>
                                 <div style="text-align: center;">
                                     <a [routerLink]="['/view-details']" [state]="{ data: job, previous: 'user-profile'}" class="btn" style="margin: 0 auto; background-color:#4F84DE;border: none; width: 80%;margin: 5px;">View Live Listing</a>
-                                    <a  class="btn" style="margin: 0 auto; background-color:#4F84DE;border: none; width: 80%; margin: 5px;">View Offers</a>
+                                    <a [routerLink]="['/viewBids']" [state]="{ data: job, previous: 'user-profile'}"class="btn" style="margin: 0 auto; background-color:#4F84DE;border: none; width: 80%; margin: 5px;">View Offers</a>
+                                    
                                 </div>
                                 
                             </div>
