--- a/src/app/Pages/view-job-details/view-job-details.component.html
+++ b/src/app/Pages/view-job-details/view-job-details.component.html
@@ -104,7 +104,11 @@
 
                 <hr width="90%" />
 
-                <div style="text-align: center;" *ngIf='!bidSuccess && !bidExists'>
+                <div style="text-align: center;" *ngIf='!jobAvailable'>
+                    <a  class="btn disabled" style="margin: 0 auto; background-color:#4F84DE;border: none; width: 80%;">Job Unavailable</a>
+                </div>
+
+                <div style="text-align: center;" *ngIf='!bidSuccess && !bidExists && jobAvailable'>
                     <a (click)='applyToJob()' class="btn" style="margin: 0 auto; background-color:#4F84DE;border: none; width: 80%;">Apply to Job</a>
                 </div>
 
@@ -115,6 +119,7 @@
                 <div style="text-align: center;" *ngIf='bidExists'>
                     <a  class="btn" style="margin: 0 auto; background-color:hsl(355, 75%, 46%);border: none; width: 80%;">You Already Applied!</a>
                 </div>
+
                 
                 
 
